[tool.poetry]
name = "wiley"
version = "0.1.0"
description = ""
authors = ["Xens Chan <xentisize@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"
pytest = "^5.4.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
